--- a/replay-playground/src/AppStyles.css
+++ b/replay-playground/src/AppStyles.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500&display=swap');
 
 *{
     font-family:'Poppins', sans-serif;
@@ -7,7 +8,11 @@
     padding:0;
 }
 
-html{
+p{
+    margin:0 !important;
+}
+
+body{
     background: rgb(0,95,115);
     background: -moz-linear-gradient(90deg, rgba(0,95,115,1) 0%, rgba(10,147,150,1) 22%, rgba(148,210,189,1) 48%, rgba(233,216,166,1) 75%, rgba(238,155,0,1) 100%);
     background: -webkit-linear-gradient(90deg, rgba(0,95,115,1) 0%, rgba(10,147,150,1) 22%, rgba(148,210,189,1) 48%, rgba(233,216,166,1) 75%, rgba(238,155,0,1) 100%);
