Ajustes para mobile. Falta el logo

--- a/replay-playground/src/components/Header/Header.module.css
+++ b/replay-playground/src/components/Header/Header.module.css
@@ -50,3 +50,11 @@
     display:flex;
     align-items: center;
 }
+
+
+@media (max-width: 760px){
+   
+    .subtitle{
+        display:none;
+    } 
+}
