--- a/replay-playground/src/components/Button/Button.module.css
+++ b/replay-playground/src/components/Button/Button.module.css
@@ -22,3 +22,13 @@
     transform: translateY(-3px);
     transition:all 0.4s ease;
 }
+
+
+
+@media (max-width: 760px){
+   
+    .button{
+        padding:10px 0px;
+        margin-right:15px;
+    }
+}
