--- a/replay-playground/src/AppStyles.css
+++ b/replay-playground/src/AppStyles.css
@@ -1,6 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500&display=swap');
 
+:root{
+    --color-1:var(#F94144);
+    --color-2:var(#F3722C);
+    --color-3:var(#F8961E);
+    --color-4:var(#F9844A);
+    --color-5:var(#F9C74F);
+    --color-6:var(#90BE6D);
+    --color-7:var(#43AA8B);
+    --color-8:var(#4D908E);
+    --color-9:var(#577590);
+    --color-10:var(#277DA1);
+}
+
 *{
     font-family:'Poppins', sans-serif;
     font-weight:400;
