--- a/replay-playground/src/components/GuideMenu/GuideMenu.module.css
+++ b/replay-playground/src/components/GuideMenu/GuideMenu.module.css
@@ -81,3 +81,12 @@
     margin-left: 20px !important;
     font-size:10px;
 }
+
+
+@media (max-width: 760px){
+    
+    .menuContainer{
+        width:96%;
+        padding:25px;
+    }
+}
