--- a/replay-playground/src/components/GuideMenu/GuideMenu.module.css
+++ b/replay-playground/src/components/GuideMenu/GuideMenu.module.css
@@ -84,11 +84,19 @@
 
 
 @media (max-width: 760px){
-    
+    .menuBackdrop{
+        position:fixed;
+    }
     .menuContainer{
         width:96%;
         padding:25px;
         max-height:98%;
         overflow:auto;
+    }
+    .menuTitle{
+        font-weight: 600;
+        font-size: 20px;
+        text-align: center;
+        margin-top: 30px;
     }
 }
