--- a/replay-playground/src/components/HelpModal/HelpModal.module.css
+++ b/replay-playground/src/components/HelpModal/HelpModal.module.css
@@ -47,10 +47,19 @@
 
 @media (max-width: 760px){
     
+    .helpBackdrop{
+        position:fixed;
+    }
     .helpContainer{
         width:96%;
         padding:25px;
         max-height:98%;
         overflow:auto;
+    }
+    .menuTitle{
+        font-weight: 600;
+        font-size: 22px;
+        text-align: center;
+        margin:30px 0px 40px 0px !important;
     }
 }
