Ajustes en Help Modal de titulo

--- a/replay-playground/src/components/HelpModal/HelpModal.module.css
+++ b/replay-playground/src/components/HelpModal/HelpModal.module.css
@@ -56,7 +56,7 @@
         max-height:98%;
         overflow:auto;
     }
-    .menuTitle{
+    .helpTitle{
         font-weight: 600;
         font-size: 22px;
         text-align: center;
